--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-private_key_file = /opt/ansible-demo/key.pem
+private_key_file = /opt/Jenkins_Ansible_Integration/key.pem
 host_key_checking = False
 
