--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 private_key_file = /opt/Jenkins_Ansible_Integration/key.pem
 host_key_checking = False
-interpreter_python = /usr/bin/python
+interpreter_python = /usr/bin/python3.5
 
